_2009_02_24__16_16_14_ Chi-Hsiu Liang

  * Moved countDimerCellDOS() to the end of MolecularComponent
  * Removed  m_pDensityOfStatesCalculator variable from MolecularComponent as this will be read in from XML and use directly.
  * Modified gDensityOfStates::calcDensityOfStates() so that it reads the DOSCMethod by itself.
  * Further prepared for other DOS calculator plugin
  * Reformat code to remove tabs. Please check the setting of tabs and spaces and make sure to use Ctrl+K Ctrl+F to 
    remove tabs in the code before check-in.

2009-02-22 Struan Robertson

  * ReactionManager.cpp/IsomerizationReaction.cpp: Sketch of contracted basis method added.  

2009-02-22 Struan Robertson

  * ReactionManager.cpp: Removed initial population code from BuildReactionOperator method to setInitialPopulation method, in
preparation for basis set work.
  * Updated baselines that have altered as a consequence of the above changes.

2009-02-21 Struan Robertson

  * TMatrix.h: Reviewed use of type int and replaced with size_type where appropriate.
  * Removed warning messages concerning double to int conversion by adding two new functions to XMLPersist.

_2009_02_20__16_17_31_ Chi-Hsiu Liang

  * Accounts for QM rotors that are close to prolate/oblate symmetric or spherical.

_2009_02_20__13_06_31_ Chi-Hsiu Liang

  * Intemediate version while building SS-RS-ME and QM rotors.
  * Add     bool doSSRSMethod;                    // Run steady state and reservoir state routine
    in MesmerFlags.
  * Does empty DOS grain checking. Put the highest cell energy as the grain energy if no average grain energy is available.
  * QM rotor plugin class is examed. Now modifying it again to add near-symmetric top rotor.

_2009_02_16__14_00_39_ Chi-Hsiu Liang

  * Correct an missing part of mesmer.log during merge in main.cpp
  * Commit the change in mesmer.log

2009-02-15 Chris Morley

	* MesmerQA/QA.bat: add an output file to avoid overwriting the
	input file with new non-timestamp interface.
	