@@ -30,14 +30,13 @@ namespace mesmer
 
     // Type defs
 
-    typedef         size_t  size_type ;
     typedef         T*      iterator ;
     typedef const   T*      const_iterator ;
     typedef         T       value_type ;
 
     // Constructor
 
-    explicit Matrix(size_type n, const T& a = T() ) ;
+    explicit Matrix(size_t n, const T& a = T() ) ;
 
     //Copy constructor
 
@@ -50,23 +49,23 @@ namespace mesmer
     // Operators
 
     Matrix& operator=(const Matrix& rhs) ;
-    T* operator[](const size_type i) { return m_matrix[i] ; }
-    const T* operator[](const size_type i) const { return m_matrix[i] ; }
+    T* operator[](const size_t i) { return m_matrix[i] ; }
+    const T* operator[](const size_t i) const { return m_matrix[i] ; }
 
     // Accessors
 
-    size_type size() const { return m_msize ; }
+    size_t size() const { return m_msize ; }
 
     // Modifiers
-    void resize(const size_type n) ;
-    void showFinalBits(const size_type n, bool isTabbed = false);
-    void reset(const size_type n);
+    void resize(const size_t n) ;
+    void showFinalBits(const size_t n, bool isTabbed = false);
+    void reset(const size_t n);
 
   protected:
 
     // Size of matrix.
 
-    size_type m_msize ;
+    size_t m_msize ;
 
     // Pointer to location of matrix.
 
@@ -74,7 +73,7 @@ namespace mesmer
 
     // Internal function that creates matrix.
 
-    void create(size_type n) {
+    void create(size_t n) {
 
       m_msize = n ;
 
@@ -84,13 +83,13 @@ namespace mesmer
 
     // Internal function that allocates space for matrix.
 
-    T** allocatematrix(size_type n) {
+    T** allocatematrix(size_t n) {
 
       T ** matrix = new T*[n] ;
 
       matrix[0] = new T[n*n] ;
 
-      for ( size_type i = 1 ; i < n ; i++ )
+      for ( size_t i = 1 ; i < n ; i++ )
         matrix[i] = matrix[i - 1] + n ;
 
       return matrix ;
@@ -118,12 +117,12 @@ namespace mesmer
   // Construct a matrix of size n and initialized to a.
 
   template<class T>
-  Matrix<T>::Matrix(size_type n, const T& a) : m_msize(0), m_matrix(0) {
+  Matrix<T>::Matrix(size_t n, const T& a) : m_msize(0), m_matrix(0) {
 
     create(n) ;
 
-    for ( size_type i = 0 ; i < m_msize ; i++ )
-      for ( size_type j = 0 ; j < m_msize ; j++ )
+    for ( size_t i = 0 ; i < m_msize ; i++ )
+      for ( size_t j = 0 ; j < m_msize ; j++ )
         m_matrix[i][j] = a ;
   }
 
@@ -134,8 +133,8 @@ namespace mesmer
 
     create(rhs.m_msize) ;
 
-    for ( size_type i = 0 ; i < m_msize ; i++ )
-      for ( size_type j = 0 ; j < m_msize ; j++ )
+    for ( size_t i = 0 ; i < m_msize ; i++ )
+      for ( size_t j = 0 ; j < m_msize ; j++ )
         m_matrix[i][j] = rhs[i][j] ;
   }
 
@@ -156,8 +155,8 @@ namespace mesmer
 
       }
 
-      for ( size_type i = 0 ; i < m_msize ; i++ )
-        for ( size_type j = 0 ; j < m_msize ; j++ )
+      for ( size_t i = 0 ; i < m_msize ; i++ )
+        for ( size_t j = 0 ; j < m_msize ; j++ )
           m_matrix[i][j] = rhs[i][j] ;
     }
     return *this ;
@@ -166,7 +165,7 @@ namespace mesmer
   // Modifiers.
 
   template<class T>
-  void Matrix<T>::resize(const size_type n){
+  void Matrix<T>::resize(const size_t n){
 
     if (n < 1){
       stringstream errorMsg;
@@ -175,9 +174,9 @@ namespace mesmer
 
     T **matrix = allocatematrix(n)  ;
 
-    size_type msize = std::min(n, m_msize) ;
-    for ( size_type i = 0 ; i < msize ; i++ )
-      for ( size_type j = 0 ; j < msize ; j++ )
+    size_t msize = std::min(n, m_msize) ;
+    for ( size_t i = 0 ; i < msize ; i++ )
+      for ( size_t j = 0 ; j < msize ; j++ )
         matrix[i][j] = m_matrix[i][j] ;
 
     destroy() ;
@@ -189,7 +188,7 @@ namespace mesmer
   }
 
   template<class T>
-  void Matrix<T>::reset(const size_type n){
+  void Matrix<T>::reset(const size_t n){
 
     if (n < 1){
       stringstream errorMsg;
@@ -198,8 +197,8 @@ namespace mesmer
 
     T **matrix = allocatematrix(n)  ;
 
-    for ( size_type i = 0 ; i < n ; i++ )
-      for ( size_type j = 0 ; j < n ; j++ )
+    for ( size_t i = 0 ; i < n ; i++ )
+      for ( size_t j = 0 ; j < n ; j++ )
         matrix[i][j] = 0.0;
 
     destroy() ;
@@ -211,10 +210,10 @@ namespace mesmer
   }
 
   template<class T>
-  void Matrix<T>::showFinalBits(const size_type n, bool isTabbed){
+  void Matrix<T>::showFinalBits(const size_t n, bool isTabbed){
 
     // if n == 0, print the whole matrix
-    size_type fb(n);
+    size_t fb(n);
     if (n == 0) fb = m_msize;
 
     //
@@ -222,16 +221,16 @@ namespace mesmer
     //
     ctest << "{\n";
     if (!isTabbed){
-      for (size_type i = m_msize - fb ; i < m_msize ; ++i ) {
-        for (size_type j = m_msize - fb ; j < m_msize ; ++j ) {
+      for (size_t i = m_msize - fb ; i < m_msize ; ++i ) {
+        for (size_t j = m_msize - fb ; j < m_msize ; ++j ) {
           formatFloat(ctest, m_matrix[i][j], 5,  13) ;
         }
         ctest << endl;
       }
     }
     else{
-      for (size_type i = m_msize - fb ; i < m_msize ; ++i ) {
-        for (size_type j = m_msize - fb ; j < m_msize ; ++j ) {
+      for (size_t i = m_msize - fb ; i < m_msize ; ++i ) {
+        for (size_t j = m_msize - fb ; j < m_msize ; ++j ) {
           ctest << m_matrix[i][j] << "\t";
         }
         ctest << endl;
